--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Pat's Salmon Cookies</title>
 </head>
+    <div id = 'header'>
+        <!--"Pat's logo-->
+        <img id = 'logo' src="./images/logo.png" alt="Pat's Salmon Cookies with Salmon image"/>
+        <!--Links for navigation-->
+        <ul>
+            <li class="nav"><b>ABOUT</b></li>  
+            <li class="nav"><b>LOCATIONS</b></li>
+            <li class="nav"><b>CONTACT</b></li>
+        </ul>
+    </div>
 <body>
     
 </body>
