--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
 <body>
     <script src="./js/app.js"></script>
 
+    <ul id = 'store-container'>
+        
+            <li></li>
+    </ul>
 </body>
 </html>
