lab 6 assignment complete

--- a/sales.html
+++ b/sales.html
@@ -8,6 +8,9 @@
    
 </head>
 <body>
+    <h1 id='patHeader'>Pat's Salmon Cookies by Storefront</h1>
+
+
     <script src="js/app.js"></script>
 </body>
 </html>
