--- a/sales.html
+++ b/sales.html
@@ -8,7 +8,11 @@
    
 </head>
 <body>
-    <h1 id='patHeader'>Pat's Salmon Cookies by Storefront</h1>
+    <h1>Pat's Salmon Cookies by Storefront</h1>
+
+    <table id='patHeader'>
+
+    </table>
 
 
     <script src="js/app.js"></script>
