needs corrections for lab 7

--- a/sales.html
+++ b/sales.html
@@ -10,6 +10,16 @@
 <body>
     <h1>Pat's Salmon Cookies by Storefront</h1>
 
+    <form>
+        <fieldset>
+            <label> Location :<input></label>
+            <label> Minimum Customers<input></label>
+            <label> Maximum Customers<input></label>
+            <label> Average Cookies per Customers<input></label>
+            <input type="submit">
+        </fieldset>
+    </form>
+
     <table id='patHeader'>
 
     </table>
