fixed the render functions

--- a/sales.html
+++ b/sales.html
@@ -10,13 +10,13 @@
 <body>
     <h1>Pat's Salmon Cookies by Storefront</h1>
 
-    <form>
+    <form id = 'store_input_form'>
         <fieldset>
-            <label> Location :<input></label>
-            <label> Minimum Customers<input></label>
-            <label> Maximum Customers<input></label>
-            <label> Average Cookies per Customers<input></label>
-            <input type="submit">
+            <label> Location :<input type='text'></label>
+            <label> Minimum Customers<input type='text'></label>
+            <label> Maximum Customers<input type='text'></label>
+            <label> Average Cookies per Customers<input type='text'></label>
+            <input id ='submit' type="submit">
         </fieldset>
     </form>
 
