partial working form, some bugs to tweak out

--- a/sales.html
+++ b/sales.html
@@ -12,10 +12,11 @@
 
     <form id = 'store_input_form'>
         <fieldset>
-            <label> Location :<input type='text'></label>
-            <label> Minimum Customers<input type='text'></label>
-            <label> Maximum Customers<input type='text'></label>
-            <label> Average Cookies per Customers<input type='text'></label>
+            <h3>New Store Information</h3>
+            <label> Location :<input name='storeName' type='text'></label>
+            <label> Minimum Customers<input name='minCust' type='text'></label>
+            <label> Maximum Customers<input name='maxCust' type='text'></label>
+            <label> Average Cookies per Customers<input name='aveCookies'type='text'></label>
             <input id ='submit' type="submit">
         </fieldset>
     </form>
