more work to the html formatting

--- a/sales.html
+++ b/sales.html
@@ -8,6 +8,20 @@
    
 </head>
 <body>
+        <header>
+                <div>
+                        <!--"Pat's logo-->
+                        <img id = 'logo' src="./images/logo.png" alt="Pat's Salmon Cookies with Salmon image"/>
+                        <!--Links for navigation-->
+                        <nav>
+                            <ul>
+                                <li class="nav"><b>ABOUT</b></li>  
+                                <li class="nav"><b>LOCATIONS</b></li>
+                                <li class="nav"><b>CONTACT</b></li>
+                            </ul>
+                        </nav>
+                    </div>
+            </header>
     <h1>Pat's Salmon Cookies by Storefront</h1>
 
     <form id = 'store_input_form'>
